// Generated by github.com/davyxu/tabtoy
// Version: 2.8.10
// DO NOT EDIT!!

package table;


// Defined in table: TPalaceMapBase
message TPalaceMapBase
{	
	
	
	repeated PalaceMapDefine PalaceMap = 1; // PalaceMap

}

// Defined in table: PalaceMap
message PalaceMapDefine
{	
	
	
	optional uint32 Id = 1; // id
	
	
	optional string Name = 2; // 宫殿名字
	
	
	optional string UlockPath = 3; // 解锁图片路径
	
	
	optional string Lockpath = 4; // 锁定图片路径
	
	
	optional int32 UlockPassId = 5; // 解锁关卡（配置关卡ID)
	
	
	optional int32 x = 6; // 位置显示x
	
	
	optional int32 y = 7; // 位置显示y
	
	
	optional string Headpath = 8; // 头像图片路径

}

