// Generated by github.com/davyxu/tabtoy
// Version: 2.8.10
// DO NOT EDIT!!

package table;


// Defined in table: TPalaceMapMaidBase
message TPalaceMapMaidBase
{	
	
	
	repeated PalaceMapMaidDefine PalaceMapMaid = 1; // PalaceMapMaid

}

// Defined in table: PalaceMapMaid
message PalaceMapMaidDefine
{	
	
	
	optional uint32 Id = 1; // id
	
	
	optional uint32 OpenLevel = 2; // 开放等级
	
	
	repeated string UnlockPrice = 3; // 解锁金币（0个、1万、2亿、3兆、4京、5垓、6秭、7穰、8沟、9涧、10正、11载 、12极）
	
	
	repeated string GoldAddition = 4; // 获得金币(每秒)
	
	
	repeated string ItemGroup = 5; // 道具组(道具id_权重;道具id_权重)
	
	
	optional uint32 ItemProb = 6; // 产出概率(万分比)
	
	
	optional string Describe = 7; // 产出描述

}

