// Generated by github.com/davyxu/tabtoy
// Version: 2.8.10
// DO NOT EDIT!!

package table;


// Defined in table: TPalacePartBase
message TPalacePartBase
{	
	
	
	repeated PalacePartsDefine PalaceParts = 1; // PalaceParts

}

// Defined in table: PalaceParts
message PalacePartsDefine
{	
	
	
	optional uint32 Id = 1; // id
	
	
	optional uint32 PartId = 2; // 部件id
	
	
	optional uint32 Level = 3; // 等级
	
	
	repeated string Cost = 4; // 升到下一级的消耗
	
	
	optional uint32 Charm = 5; // 对应的魅力
	
	
	optional string PartName = 6; // 家具名字

}

